
	* coblocal.h, common.h: moved some internal limits to coblocal.h

2022-01-01  Ron Norman <rjn@inglenet.com>

	* numeric.c: Speed up cob_decimal_adjust routine

2021-12-31  Ron Norman <rjn@inglenet.com>

	* numeric.c: Speed up cob_decimal_add, cob_decimal_sub, cob_decimal_cmp
	  Use the powers of 10 table instead of recomputing
	  Add cob_decimal_copy for use by emitted code

2021-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_version_summary) [__PDCURSES__]: show version
	  info for old versions of PDCurses, too

2021-11-22  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_allocate): only initialize upon request with optimized
	  initialization for binary zeroes

2021-11-18  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_get_sig_name, cob_get_sig_description,
	  cob_set_sig_description): hardened against unexpected signal numbers
	* common.c (signals, cob_get_sig_description): description is
	  post-initialized to allow use of gettext - non-static descriptions

2021-11-14  Ron Norman <rjn@inglenet.com>

	Implement FR #235: add bitwise operators for numeric items
	* numeric.c, common.h: new cob_logical_xxx functions for bitwise operations
	* intrinsic.c (cob_intr_binop): add code for bitwise operations

2021-11-05  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_allocate): fixed check for maximum size to work as
	  intended for values > INT_MAX
	* common.h [HAVE_CONFIG_H]: include config.h (to be moved to coblocal.h)
	* common.h [COB_64_BIT_POINTER]: allow field size up to 2GB
	* intrinsic.c [HAVE_LANGINFO_CODESET && _WIN32]: fix compile error,
	  needs to be checked later if undefine of HAVE_LANGINFO_CODESET is
	  reasonable

2021-11-01  Simon Sobisch <simonsobisch@gnu.org>

	* coblocal.h: adjusted ISFINITE definition
	* coblocal.h: removed 'extern "C"' as this header should not
	  be externally included
	* common.h, coblocal.h: moved _MSC_VER comparison macros as those are
	  not relevant to user-space
