@@ -4381,6 +4381,7 @@ indexed_close (cob_file *f, const int opt)
 		bdb_env->lock_id_free (bdb_env, p->bdb_lock_id);
 	}
 	cob_free (p);
+	f->file = NULL;
 
 	return COB_STATUS_00_SUCCESS;
 
